fix text wrapping on long skill names

--- a/components/SkillList.css
+++ b/components/SkillList.css
@@ -65,9 +65,11 @@
 	color: rgb(121,64,22);
 	display: flex;
 	flex: 1;
+	overflow: hidden;
 	text-stroke: 1px rgb(121,64,22);
 	-webkit-text-stroke: 1px rgb(121,64,22);
 	text-shadow: -1px -1px 0 white, 1px -1px 0 white, -1px 1px 0 white, 1px 1px 0 white;
+	text-wrap: nowrap;
 }
 
 .skillIcon {
