--- a/umalator/bundle.css
+++ b/umalator/bundle.css
@@ -146,6 +146,7 @@
   color: rgb(121, 64, 22);
   display: flex;
   flex: 1;
+  overflow: hidden;
   text-stroke: 1px rgb(121, 64, 22);
   -webkit-text-stroke: 1px rgb(121, 64, 22);
   text-shadow:
@@ -153,6 +154,7 @@
     1px -1px 0 white,
     -1px 1px 0 white,
     1px 1px 0 white;
+  text-wrap: nowrap;
 }
 .skillIcon {
   height: 2.2em;
